--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <title>dablew.in | Home</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 
 <body>
@@ -123,5 +125,6 @@
     <script type="module" src="script.js"></script>
 
 </body>
+
 
 </html>
